# DINO-EM-PEFT

./: README.md  pyproject.toml
config/: em_lora_cuda_cluster.yaml  em_lora_cuda_tversky.yaml  em_lora_mac.yaml  em_pca_mac.yaml  paired_feat_analysis_cluster.yaml
config/cluster/: ood_detection_cluster.yaml
config/mac/: ood_detection_mac.yaml
configs/: README.md
configs/backbones/: openclip.yaml
configs/cluster/: droso_cluster.yaml  droso_dinov3_cluster.yaml  droso_dinov3_fullft_cluster.yaml  droso_openclip_vitl14_cluster.yaml  fullft_dinov2_cluster.yaml  lucchi_dinov2_cluster.yaml  lucchi_dinov3_fullft_cluster.yaml  lucchi_dinov3_head_cluster.yaml  lucchi_dinov3_lora_cluster.yaml  lucchi_openclip_vitl14_cluster.yaml  paired_dinov2_cluster.yaml  paired_dinov2_paired_balance.yaml  paired_dinov3_cluster.yaml  (+3 more)
scripts/: README.md  ablation_paired_balance_dinov2.py  eval_em_seg.py  extract_features.py  inspect_backbone.py  ood-detection.py  ood_detection.py  plot_seg_summary.py  run_domain_analysis.py  run_pca.py  smoke_test.py  smoke_test_lora.py  summarize_seg_results.py  train_em_seg.py
slurm/: ablation_paired_balance_dinov2.sbatch  domain_analysis.sbatch  grid_droso.sbatch  grid_droso_dinov3.sbatch  grid_droso_openclip.sbatch  grid_lucchi_dinov2.sbatch  grid_lucchi_dinov3.sbatch  grid_lucchi_openclip.sbatch  grid_paired_dinov2.sbatch  grid_paired_dinov3.sbatch  grid_paired_openclip.sbatch  single_lucchi_dinov2.sbatch  single_lucchi_dinov3.sbatch  single_lucchi_openclip.sbatch  single_paired_dinov3.sbatch  single_paired_fullft.sbatch  testing-cluster.sbatch
(+28 files in other folders)
